Beginning review: Added:   * cases environment, which is better then what was used   * split abbreviation to have multiline and aligned equations   * defined \prob and \exp as the abbreviation for     *\mathbb{P}     *\mathbb{E}   * added introduction, so now seems fine. TODO Poisson processes Corrected   * some indexes were wrong   * States were on small letter, converted to capital ones

--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -38,7 +38,7 @@
 \usepackage[acronym]{glossaries}
 \newacronym[plural=MCs,firstplural=Markov Chains (MCs)]{mc}{MC}{Markov Chain}
 
-% support for counting 
+% support for counting
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{corollary}{Corollary}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
@@ -56,6 +56,8 @@
 \def\eeq{\end{equation}}
 \def\bal{\begin{align}}
 \def\eal{\end{align}}
+\def\prob{\ensuremath\mathbb{P}}
+\def\exp{\ensuremath\mathbb{E}}
 
 \newcommand{\Fig}[1]{Fig.~\ref{#1}}
 \newcommand{\eq}[1]{(\ref{#1})}
