--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -4,7 +4,7 @@ A markov process is a process $X_n \text{ or } X_t$ s.t.
 \begin{equation}
 \prob[X_{n+1} = j | X_0 = i_0, X_1 = i_1, \dots, X_n = i_n] = \prob[X_{n+1} = j | X_n=i_n] = P
 \end{equation}
-with P as the \textit{ one-step probability}. From now on, the notation for that probability
+with P as the \textit{one-step probability}. From now on, the notation for that probability
 will be $P_{i,j}^{n,n+1}=P_{i,j} \quad \forall n$ if the MC is homogeneous, i.e.
 the transition probabilities are stationary.\\
 We can suppose $n\ge 0$ and we'll have the \textbf{transition probability matrix}, which will characterize the
@@ -14,11 +14,11 @@ P_{00} & P_{01} & \cdots  \\
 P_{10} & P_{11} & \cdots \\
 \vdots & \vdots & \ddots  \\
  \end{pmatrix}
-\text{with} P_{i,j}\ge 0 \forall i,j \quad \text{ and} \sum\limits_{j=0}^{+\infty}P_{i,j} = 1 \quad \forall i
+\text{with } P_{i,j}\ge 0 \forall i,j \quad \text{ and } \sum\limits_{j=0}^{+\infty}P_{i,j} = 1 \quad \forall i
 \end{equation}
 For example
 \begin{equation}
-\prob[X_3 = i_3 , X_2 = i_2, X_1 = i_1, X_ = i_0]=P_{i_0}\cdot P_{i_0,i_1}\cdot P_{i_1,i_2}\cdot P_{i_2,i_3}
+\prob[X_3 = i_3 , X_2 = i_2, X_1 = i_1, X_0 = i_0]=P_{i_0}\cdot P_{i_0,i_1}\cdot P_{i_1,i_2}\cdot P_{i_2,i_3}
 \end{equation}
 
 The description of a markov process is given from the initial state probability and the transition probability matrix.
@@ -37,16 +37,18 @@ Suppose the service time occupies only one slot and all the slots for service ti
 If the queue is empty, that time slot is wasted.
 Now let the number of users arriving in the n-th slot be $\xi_n$ and the number of users in
 the system in the n-th slot  be $X_n$. Then we have:
+ \begin{equation} 
+ 	\begin{split}
+ 	&\prob[\xi_n=k] = a_k \text{, probability of k arriving users at time n}\\
+  	&X_{n+1}=
+		\begin{cases}
+ 			X_n -1 +\xi_n &  \text{if } X_n >0 \\
+ 			\xi_n 			 	&  \text{if } X_n = 0
+ 		\end{cases}
+ 	\end{split}
+ \end{equation}
 
-% \begin{equation} \begin{split}
-% &\prob[\xi_n=k] = a_k \text{probability of k arriving users at time n}\\
-%  &X_{n+1}=\begin{cases}
-% 	X_n -1 +\xi_n &  \text{if} X_n >0 \\
-% 	\xi_n 			 	&  \text{if} X_n = 0
-% \end{cases}
-% \end{split}\end{equation}
-
-The transition probability matrix is
+The transition probability matrix:
 \begin{equation} P=\begin{pmatrix}
 	a_{0} & a_{1} & a_2 & \cdots  \\
 	a_{0} & a_{1} & a_2 & \cdots  \\
@@ -82,14 +84,13 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
 	\end{enumerate}
 
 	\begin{theorem}
-		For a regular \gls{mc} with states 0, 1, ..., N the limit distribution $\bm\pi = (\pi_0,\pi_1,\cdots,\pi_N)$ is the unique solution of the following system of equations:
-
+		For a regular \gls{mc} with states 0, 1, ..., N the limit distribution $\bm\pi = (\pi_0,\pi_1,\cdots,\pi_N)$ is the unique solution of the following system of equations:\\
+		
 		$\begin{cases}
 			\pi_j = \sum\limits_{k=0}^N \pi_k P_{k j} & \text{for } j = 0,1, \cdots, N \\
 			\sum\limits_{k=0}^N \pi_k = 1\\
 			\\ \pi_k \ge 0 & \forall k
 		\end{cases}$
-
 	\end{theorem}
 
 	\begin{proof} of \textbf{existence}:
@@ -185,21 +186,24 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
 	\end{definition}
 
 	So the probability of ever going back to state $i$ can be written as
-	$$ f_{ii} = \sum\limits_{n=1}^\infty f_{ii}(n)  = \sum\limits_{n=1}^\infty P[R_i=n | X_0=i] $$
+	$$ f_{ii} = \sum\limits_{n=1}^\infty f_{ii}(n)  = \sum\limits_{n=1}^\infty \mathbb{P}[R_i=n | X_0=i] $$
 	where $f_{ii}(n)$ is the probability of returning to state $i$ in $n$ steps.
 
 	\begin{definition}[Recurrent state]
 		a state is recurrent if $f_{ii} = 1$
 	\end{definition}
+	In other words we say that a state $i$ is recurrent if and only if, after the process starts from state $i$, the probability of its returning to state i after some finite length of time is one.
 
 	\begin{definition}[Transient state]
 		a state is transient if  $f_{ii} < 1$
 	\end{definition}
+	In other words a state $i$ is said to be transient if there exists a non-zero probability of never coming back to it.\footnote{like Angela. Please come back Angela, I love you.}
+
 
 	\begin{definition}
 		$M$ is the number of returns to state $i$, starting from $i$
 		$$\mathbb{E}[M | X_0 = i] = \sum\limits_{k=1}^\infty \mathbb{P}[M\geq k | X_0 = i] = \sum\limits_{k=1}^\infty f_{ii}^k = \begin{cases}
-		\frac{f_{ii}}{1-f_ii}, & \text{if transient} \\
+		\frac{f_{ii}}{1-f_{ii}}, & \text{if transient} \\
 		\infty, & \text{if recurrent}
 		\end{cases}$$
 	\end{definition}
@@ -224,7 +228,7 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
     = \sum\limits_{n=1}^\infty \mathbb{E}\left[\mathds{1}\{ X_n = i\} | X_0 = i\right] = \sum\limits_{n=1}^\infty P_{ii}^{(n)} $$
 		So we have shown that $\mathbb{E}[M | X_0=i] = \sum\limits_{n=1}^\infty P_{ii}^{(n)}$.\\
 		Now, remembering that$$ \mathbb{E}[M | X_0 = i] = \begin{cases}
-		\frac{f_{ii}}{1-f_ii}, & \text{if transient} \\
+		\frac{f_{ii}}{1-f_{ii}}, & \text{if transient} \\
 		\infty, & \text{if recurrent}
 		\end{cases}$$
 		the proof is concluded.
@@ -244,23 +248,6 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
 		\item $P_{ij}^{(n)} \text{ and } P_{ji}^{(m)} > 0$
 		\end{itemize}
 		$$\sum\limits_{l=1}^\infty P_{jj}^{(l)} = \infty \Rightarrow j \text{ is recurrent}$$
-	\end{proof}
-
-	\begin{theorem}
-		(not to confuse with theorem on periodicity)
-		$$\text{if } i\leftrightarrow j \text{and i is recurrent} \Rightarrow \text{ j is also recurrent}$$
-	\end{theorem}
-	---
-	\begin{proof}
-		$$\text{Since } i\leftrightarrow j : \exists m,n \text{ such that } P_{ij}^{(n)} \text{ and } P_{ji}^{(m)} > 0$$
-		$$\text{let } r>0 : P_{jj}^{(m+r+n)} = \sum\limits_{r, k} P_{jh}^{(m)} P_{hk}^{(r)} P_{kj}^{(n)} \geq P_{ji}^{(m)}  P_{ii}^{(r)}  P_{ij}^{(n)}$$
-		$$\sum\limits_{l=1}^\infty P_{jj}^{(l)} \geq \sum\limits_{r=1}^\infty P_{jj}^{(m+r+n)} \geq \sum\limits_{r=1}^\infty P_{ji}^{(m)}  P_{ii}^{(r)}  P_{ij}^{(n)} = P_{ji}^{(m)} P_{ij}^{(n)} \sum\limits_{r=1}^\infty P_{ii}^{(r)}$$
-		but since \begin{itemize}
-		\item$i$ is recurrent $\Rightarrow \sum\limits_{n=1}^\infty P_{ii}^{(n)} = \infty$
-		\item $P_{ij}^{(n)} \text{ and } P_{ji}^{(m)} > 0$
-		\end{itemize}
-		$$\sum\limits_{l=1}^\infty P_{jj}^{(l)} = \infty \Rightarrow j \text{ is recurrent}$$
-
 	\end{proof}
 
 	\begin{theorem}[Basic limit theorem on MC]
