In order to make it compilable

--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -143,7 +143,7 @@
 \endgroup
 \mainmatter
 \input{introduzione.tex}
-\input{chapter_2.tex}
+%\input{chapter_2.tex}
 \input{chapter_poisson_processes.tex}
 
 \end{document}
