First rough edition of final asymptotic MC chapter
Lots of proof have yet to be written properly (and understood lol)
Various fixed needed to make the dissertation easier to read.

--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -3,6 +3,7 @@
 % language settings
 \usepackage[english]{babel}
 \usepackage[T1]{fontenc}
+
 \usepackage[utf8]{inputenc}
 \usepackage{textgreek}
 
@@ -18,6 +19,7 @@
 %\usepackage{rotating}
 
 % math package
+\usepackage{mathtools}
 \usepackage{amsthm}
 \usepackage{amsmath, amssymb, dsfont, bm}
 
@@ -59,7 +61,7 @@
 
 \newcommand{\Fig}[1]{Fig.~\ref{#1}}
 \newcommand{\eq}[1]{(\ref{#1})}
-\newcommand{\Tab}[1]{Tab.~\ref{#1}}
+\newcommand{\Tab}[1]{Tab.~\ref{#1}} 
 \newcommand{\Sec}[1]{Sec.~\ref{#1}}
 
 %---------------------------------
